[project]
name = "kalshi-async-plus"
version = "0.0.1"
description = "Extended kalshi sdk with methods you were missing so much."
readme = "README.md"
authors = [
    { name = "TheGrisha", email = "alert.chefs_0m@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "kalshi-python-async>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
